tests/baselines/reference/parserES5ComputedPropertyName9.errors.txt
parserES5ComputedPropertyName9.ts(2,5): error TS2304: Cannot find name 'e'.
parserES5ComputedPropertyName9.ts(2,9): error TS2304: Cannot find name 'Type'.


==== parserES5ComputedPropertyName9.ts (2 errors) ====
    class C {
       [e]: Type
        ~
!!! error TS2304: Cannot find name 'e'.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }